# opencv_streaming

./: README.md  docker-compose.yaml  pyproject.toml
bot_service/: app.py
stream_service/: app.py  config.py  exceptions.py  ref.py
stream_service/application/detection_service/: dto.py  service.py
stream_service/infra/nats/: main.py
stream_service/infra/video_capture/: adapter.py
stream_service/presentation/nats/: main.py
